WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41493
[chromium] Dragging a link triggers an assert when accessing event.dataTransfer.types
https://bugs.webkit.org/show_bug.cgi?id=41493
Summary
[chromium] Dragging a link triggers an assert when accessing event.dataTransf...
Daniel Cheng
Reported
2010-07-01 16:38:47 PDT
ClipboardChromium::writeURL violates an assumption in ClipboardChromium::getData that uriList will always be non-empty if url is valid.
Attachments
Patch
(1.37 KB, patch)
2010-07-01 16:46 PDT
,
Daniel Cheng
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Cheng
Comment 1
2010-07-01 16:46:07 PDT
Created
attachment 60313
[details]
Patch
Jian Li
Comment 2
2010-07-01 16:58:18 PDT
Comment on
attachment 60313
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2010-07-01 21:02:59 PDT
Comment on
attachment 60313
[details]
Patch Clearing flags on attachment: 60313 Committed
r62354
: <
http://trac.webkit.org/changeset/62354
>
WebKit Commit Bot
Comment 4
2010-07-01 21:03:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug