2010-07-01  Daniel Cheng  <dcheng@chromium.org>

Reviewed by Jian Li.

        [chromium] Dragging a link triggers an assert when accessing event.dataTransfer.types
        https://bugs.webkit.org/show_bug.cgi?id=41493

        ClipboardChromium::writeURL violates ClipboardChromium's assumption that uriList will always
        be non-empty if url is valid.

        No new tests.

        * platform/chromium/ClipboardChromium.cpp:
        (WebCore::ClipboardChromium::writeURL):

Canonical link: https://commits.webkit.org/53272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62354 268f45cc-cd09-0410-ab3c-d52691b4dbfc